--- a/index.html
+++ b/index.html
@@ -4,9 +4,126 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="styles/style.css">
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
    <title>Insure Landing Page</title>
 </head>
 <body>
+   <header>
+   <div class="container">
+      <div id="menu">
+         <img src="images/logo.svg" id="titleHeader"></img>
+         <nav id="navigation">
+            <li><a href="#">how we work</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Account</a></li>
+            <li><a href="#">View plans</a></li>
+         </nav>
+      </div>
+   </div>
+   </header>
+
+   <section id="main">
+      <div id="bgMain">
+         <img id="bgRight" src="images/bg-pattern-intro-right-desktop.svg" alt="">
+      </div>
+      <img id="bgLeft" src="images/bg-pattern-intro-left-desktop.svg" alt="">
+
+      <div class="container mainContainer">
+         <div class="left">
+            <div class="line"></div>
+            <h1>Humanizing your insurance.</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed minima impedit accusantium, odit animi iste, perferendis, dolor exercitationem adipisci minus velit dicta nesciunt id facilis. Voluptatem </p>
+            <div class="btnViewPlans">View plans</div>
+         </div>
+         <div class="right">
+            <img src="images/image-intro-desktop.jpg" alt="">
+         </div>
+         <div class="line endMain" ></div>
+      </div>
+
+   </section>
+   <section id="description">
+      <div class="container">
+         <h1 class="titleDescription">We're different</h1>
+         <div class="produits">
+            <div class="card">
+               <img src="images/icon-snappy-process.svg">
+               <h2>Snappy Process</h2>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, nobis!</p>
+            </div>
+            <div class="card">
+               <img src="images/icon-snappy-process.svg">
+               <h2>Snappy Process</h2>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, nobis!</p>
+            </div>
+            <div class="card">
+               <img src="images/icon-snappy-process.svg">
+               <h2>Snappy Process</h2>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, nobis!</p>
+            </div>
+         </div>
+         <div class="cadre">
+               <h1>Find out more about how we work</h1>
+               <div class="btnViewPlans how">HOW WE WORK</div>
+               <img id="bgRightCadre" src="images/bg-pattern-intro-right-desktop.svg" alt="">
+         </div>
+      </div>
+   </section>
+
+   <footer>
+      <img id="bgLeftFooter" src="images/bg-pattern-footer-desktop.svg">
+      
+      <div class="container">
+         <div class="cadreFooter">
+            <div class="foot">
+               <img src="images/logo.svg"></img>
+               <div class="social">
+                  <img src="images/icon-facebook.svg" alt="">
+                  <img src="images/icon-twitter.svg" alt="">
+                  <img src="images/icon-pinterest.svg" alt="">
+                  <img src="images/icon-instagram.svg" alt="">
+               </div>
+            </div>
+            <div class="line footerLine"></div>
+            <div class="liens">
+               <div class="lien">
+                  <a href="#">OUR COMPANY</a>
+                  <a href="#">HOW WE WORK</a>
+                  <a href="#">WHY INSURE</a>
+                  <a href="#">VIEW PLANS</a>
+                  <a href="#">REVIEWS</a>
+               </div>
+               <div class="lien">
+                  <a href="#">OUR COMPANY</a>
+                  <a href="#">HOW WE WORK</a>
+                  <a href="#">WHY INSURE</a>
+                  <a href="#">VIEW PLANS</a>
+                  <a href="#">REVIEWS</a>
+               </div>
+               <div class="lien">
+                  <a href="#">OUR COMPANY</a>
+                  <a href="#">HOW WE WORK</a>
+                  <a href="#">WHY INSURE</a>
+                  <a href="#">VIEW PLANS</a>
+                  <a href="#">REVIEWS</a>
+               </div>
+               <div class="lien">
+                  <a href="#">OUR COMPANY</a>
+                  <a href="#">HOW WE WORK</a>
+                  <a href="#">WHY INSURE</a>
+                  <a href="#">VIEW PLANS</a>
+                  <a href="#">REVIEWS</a>
+               </div>
+            </div>
+         </div>
+      </div>
+   </footer>
+   
+   
+   
+   
    
    <script src="scripts/main.js"></script>
 </body>
