corrige taille font

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, nobis!</p>
             </div>
             <div class="card">
-               <img src="images/icon-snappy-process.svg">
-               <h2>Snappy Process</h2>
+               <img src="images/icon-affordable-prices.svg">
+               <h2>Affordable Prices</h2>
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, nobis!</p>
             </div>
             <div class="card">
-               <img src="images/icon-snappy-process.svg">
-               <h2>Snappy Process</h2>
+               <img src="images/icon-people-first.svg">
+               <h2>People First</h2>
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, nobis!</p>
             </div>
          </div>
@@ -96,25 +96,23 @@
                   <a href="#">REVIEWS</a>
                </div>
                <div class="lien">
-                  <a href="#">OUR COMPANY</a>
-                  <a href="#">HOW WE WORK</a>
-                  <a href="#">WHY INSURE</a>
-                  <a href="#">VIEW PLANS</a>
-                  <a href="#">REVIEWS</a>
+                  <a href="#">HELP ME</a>
+                  <a href="#">FAQ</a>
+                  <a href="#">TERMS OF USE</a>
+                  <a href="#">PRIVATE POLICY</a>
+                  <a href="#">COOKIES</a>
                </div>
                <div class="lien">
-                  <a href="#">OUR COMPANY</a>
-                  <a href="#">HOW WE WORK</a>
-                  <a href="#">WHY INSURE</a>
-                  <a href="#">VIEW PLANS</a>
-                  <a href="#">REVIEWS</a>
+                  <a href="#">CONTACT</a>
+                  <a href="#">SALES</a>
+                  <a href="#">SUPPORT</a>
+                  <a href="#">LIVE CHAT</a>
                </div>
                <div class="lien">
-                  <a href="#">OUR COMPANY</a>
-                  <a href="#">HOW WE WORK</a>
-                  <a href="#">WHY INSURE</a>
-                  <a href="#">VIEW PLANS</a>
-                  <a href="#">REVIEWS</a>
+                  <a href="#">OTHERS</a>
+                  <a href="#">CAREERS</a>
+                  <a href="#">PRESS</a>
+                  <a href="#">LICENCE</a>
                </div>
             </div>
          </div>
