--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <title>Insure Landing Page</title>
 </head>
 <body>
-   <header>
+   <!-- <header>
    <div class="container">
       <div id="menu">
          <img src="images/logo.svg" id="titleHeader"></img>
@@ -22,29 +22,29 @@
          </nav>
       </div>
    </div>
-   </header>
+   </header> -->
 
    <section id="main">
-      <div id="bgMain">
+      <!-- <div id="bgMain">
          <img id="bgRight" src="images/bg-pattern-intro-right-desktop.svg" alt="">
       </div>
-      <img id="bgLeft" src="images/bg-pattern-intro-left-desktop.svg" alt="">
+      <img id="bgLeft" src="images/bg-pattern-intro-left-desktop.svg" alt=""> -->
 
       <div class="container mainContainer">
          <div class="left">
-            <div class="line"></div>
+            <!-- <div class="line"></div> -->
             <h1>Humanizing your insurance.</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed minima impedit accusantium, odit animi iste, perferendis, dolor exercitationem adipisci minus velit dicta nesciunt id facilis. Voluptatem </p>
-            <div class="btnViewPlans">View plans</div>
+            <!-- <div class="btnViewPlans">View plans</div> -->
          </div>
          <div class="right">
             <img src="images/image-intro-desktop.jpg" alt="">
          </div>
-         <div class="line endMain" ></div>
+         <!-- <div class="line endMain" ></div> -->
       </div>
 
-   </section>
-   <section id="description">
+   </section> 
+   <!-- <section id="description">
       <div class="container">
          <h1 class="titleDescription">We're different</h1>
          <div class="produits">
@@ -67,12 +67,12 @@
          <div class="cadre">
                <h1>Find out more about how we work</h1>
                <div class="btnViewPlans how">HOW WE WORK</div>
-               <img id="bgRightCadre" src="images/bg-pattern-intro-right-desktop.svg" alt="">
+               <img id="bgRightCadre" src="images/bg-pattern-intro-right-desktop.svg" alt=""> 
          </div>
       </div>
-   </section>
+   </section> -->
 
-   <footer>
+   <!-- <footer>
       <img id="bgLeftFooter" src="images/bg-pattern-footer-desktop.svg">
       
       <div class="container">
@@ -118,7 +118,7 @@
          </div>
       </div>
    </footer>
-   
+    -->
    
    
    
